--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
+    <!-- Navigation section -->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <h1>
+            Hori<span class="seo">seo</span>n
+        </h1>
+
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,11 +26,12 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
-    <div class="hero"></div>
+    
+    <section class="hero"></section>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
