--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         </nav>
     </header>
 
+    <!--Section for Hero and Background Image-->
     <section class="hero">
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="A group of people meeting at a table. The man on the left is typing on a laptop while the woman to his left is reading a document. The man in the middle is leading over the table while the man in the foreground flips a paper over." />
     </section>
 
-<div>
+    <!--Section for Main body content-->
 
-    <div class="content">
+    <section class="content">
         <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="An open notebook surrounded by a laptop, colored pencils, and a cup of coffee. The page of the notebook shows a graphic discussing SEO." />
             <h2>Search Engine Optimization</h2>
@@ -57,10 +58,10 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
 
-    
-    <div class="benefits">   
+    <!--Section for Benefits content-->
+    <section class="benefits">   
         <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
@@ -82,10 +83,10 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
 
-</div>
 
+    <!--Footer section-->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
